task5/tests/group/output/test3.out
lli: <stdin>:37:10: error: use of undefined value '%label_0'
br label %label_0
         ^
